# local-lm-accessible

./: .gitignore  .modalignore  AGENTS.md  LICENSE  PLAN.md  README.md  app.py  local-lm_BRD.md  pyproject.toml  requirements.txt
configs/: modal_pipeline.yaml  models.yaml  routes.yaml  safety.yaml  training_mix.yaml
data/: __init__.py
docs/: HACKATHON_DEMO.md  RISK_REGISTER.md  hf_space_and_model_ops.md
evals/: __init__.py  asr_eval.py  critical_failures.py  local_network_guard.py  metrics.py  regional_breakdown.py  report.py  run_all_evals.py  target_adapters.py  text_eval.py  vision_eval.py
modal_workflows/: __init__.py  local_lm_pipeline.py
models/: README.md  manifest.json
scripts/: approve_dataset.py  audit_source_registry.py  build_prepared_training_manifests.py  build_training_mix.py  check_asr_contingency.py  check_cuda_toolchain.py  check_finetuning_completion.py  check_llamacpp_cuda.py  check_nemotron_dependencies.py  check_no_cloud_runtime_dependency.py  check_regional_balance.py  check_text_adapter_release_readiness.py  create_dataset_card.py  create_text_adapter_packaging_plan.py  create_vision_readiness_report.py  discover_datasets.py  download_models.py  download_prepare_small_datasets.py  finalize_text_adapter.py  generate_synthetic_bank_statements.py  generate_synthetic_handwritten_notes.py  generate_synthetic_invoices.py  generate_synthetic_receipts.py  healthcheck.py  import_awesome_public_datasets.py  import_aws_open_data_registry.py  import_azure_open_datasets.py  import_epo_manifest.py  import_european_data_portal.py  local_runtime.py  (+28 more)
(+143 files in other folders)
